--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     
 
-    <script type="module" src="pile/ex-2/checkBalance.js"></script>
+    <script type="module" src="array/ex-11/fruits-conditions-combo.js"></script>
 </body>
 </html>
